per: Chỉnh sửa lại luồn favorite song