@@ -11,9 +11,9 @@ import com.spring.delivery.mapper.SongMapper;
 import com.spring.delivery.model.Playlist;
 import com.spring.delivery.model.Song;
 import com.spring.delivery.model.User;
+import com.spring.delivery.repository.FavoriteRepository;
 import com.spring.delivery.repository.PlaylistRepository;
 import com.spring.delivery.repository.SongRepository;
-import com.spring.delivery.repository.UserRepository;
 import com.spring.delivery.service.cloudinary.CloudinaryService;
 import com.spring.delivery.util.PageableUtil;
 import com.spring.delivery.util.SecurityUtil;
@@ -27,7 +27,9 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -41,7 +43,7 @@ public class PlaylistServiceImpl implements PlaylistService {
     PageableUtil pageableUtil;
     SecurityUtil securityUtil;
     CloudinaryService cloudinaryService;
-    UserRepository userRepository;
+    private final FavoriteRepository favoriteRepository;
 
     @Override
     public ResponsePlaylistCreated createPlaylist(RequestPlaylistCreated request) {
@@ -142,14 +144,14 @@ public class PlaylistServiceImpl implements PlaylistService {
         return response;
     }
 
-    private void setPlaylistCoverUrl(ResponsePlaylistCard pl, List<Playlist> playlists) {
-        if (pl.getCoverUrl() != null && !pl.getCoverUrl().isEmpty()) return;
-        var optionalPlaylist = playlists.stream().filter(p -> Objects.equals(p.getId(), pl.getId())).findFirst();
+    private void setPlaylistCoverUrl(ResponsePlaylistCard responsePlaylistCard, List<Playlist> playlists) {
+        if (responsePlaylistCard.getCoverUrl() != null && !responsePlaylistCard.getCoverUrl().isEmpty()) return;
+        var optionalPlaylist = playlists.stream().filter(p -> Objects.equals(p.getId(), responsePlaylistCard.getId())).findFirst();
         if (optionalPlaylist.isEmpty()) return;
         var song = optionalPlaylist.get().getSongs().stream().findFirst();
         if (song.isEmpty()) return;
         String url = cloudinaryService.generateImage(song.get().getCover().getPublicId());
-        pl.setCoverUrl(url);
+        responsePlaylistCard.setCoverUrl(url);
     }
 
     @Override
@@ -172,6 +174,7 @@ public class PlaylistServiceImpl implements PlaylistService {
                 .size(pageable.getPageSize())
                 .totalItems(songs.size())
                 .build());
+        response.setAllSongId(playlist.get().getSongs().stream().mapToLong(Song::getId).boxed().toList());
         return response;
     }
 
@@ -182,24 +185,30 @@ public class PlaylistServiceImpl implements PlaylistService {
             throw new AppException(AppErrorCode.UNAUTHORIZED);
 
         var id = user.get().id();
-        var playlist = Optional.of(new Playlist() {{
+        var favoriteList = favoriteRepository.findByUser_Id(id);
+        var playlistDetail = new ResponsePlaylistDetail() {{
             setName("My favorites");
-            setSongs(new HashSet<>(userRepository.findById(id).get().getSongs()));
-        }});
-        var response = playListMapper.toPlaylistDetailResponse(playlist.orElseThrow(() -> new AppException(AppErrorCode.NOT_FOUND)));
-        setPlaylistCoverUrl(response, List.of(playlist.get()));
-        var songs = playlist.get().getSongs().stream().skip((long) pageable.getPageNumber() * pageable.getPageSize()).limit(pageable.getPageSize()).map(this::toSongResponseCard).toList();
-        var totalPage = playlist.get().getSongs().size() / pageable.getPageSize();
-        response.setSongs(ApiPaging.<ResponseSongCard>builder()
-                .content(songs)
+            setTotalSong(favoriteList.size());
+            setDescription("All song i love");
+            setAllSongId(favoriteList.stream().mapToLong(it -> it.getSong().getId()).boxed().toList());
+        }};
+        var favoritePaging = favoriteList.stream().skip((long) pageable.getPageSize() * pageable.getPageNumber()).limit(pageable.getPageSize()).toList();
+        var totalPage = (favoriteList.size() / pageable.getPageSize());
+        playlistDetail.setSongs(ApiPaging.<ResponseSongCard>builder()
+                .content(favoritePaging.stream().map(it -> toSongResponseCard(it.getSong())).collect(Collectors.toList()))
                 .totalPages(totalPage + 1)
                 .isLast(pageable.getPageNumber() == totalPage)
                 .isFirst(pageable.getPageNumber() == 0)
                 .currentPage(pageable.getPageNumber())
                 .size(pageable.getPageSize())
-                .totalItems(songs.size())
+                .totalItems(favoritePaging.size())
                 .build());
-        return response;
+        if (playlistDetail.getCoverUrl() != null && !playlistDetail.getCoverUrl().isEmpty()) return playlistDetail;
+        var favorite = favoriteList.stream().findFirst();
+        if (favorite.isEmpty()) return playlistDetail;
+        String url = cloudinaryService.generateImage(favorite.get().getSong().getCover().getPublicId());
+        playlistDetail.setCoverUrl(url);
+        return playlistDetail;
     }
 
     @Override
